@@ -56,7 +56,7 @@ operand *geniCodeDerefPtr (operand *, int);
 static int isLvaluereq (int lvl);
 static operand *geniCodeCast (sym_link *, operand *, bool);
 
-#define PRINTFUNC(x) void x (struct dbuf_s *dbuf, iCode *ic, char *s)
+#define PRINTFUNC(x) void x (struct dbuf_s *dbuf, const iCode *ic, char *s)
 /* forward definition of ic print functions */
 PRINTFUNC (picGetValueAtAddr);
 PRINTFUNC (picPushValueAtAddr);
@@ -502,9 +502,8 @@ PRINTFUNC (picEndCritical)
 /* piCode - prints one iCode                                       */
 /*-----------------------------------------------------------------*/
 int
-piCode (void *item, FILE * of)
+piCode (const iCode * ic, FILE * of)
 {
-  iCode *ic = item;
   iCodeTable *icTab;
   struct dbuf_s dbuf;
 
